# actix-leptos-htmx-alpinejs-tailwindcss-template

./: .gitignore  Cargo.toml  Makefile  docker-compose.yaml
apps/front/: Cargo.toml  README.md  bun.lockb  package.json  tailwind.config.js
apps/front/src/: main.rs
apps/front/src/components/: mod.rs
apps/front/src/components/layouts/: mod.rs  root.rs
apps/front/src/components/layouts/root/: root.html  root.rs
apps/front/src/components/pages/: home.rs
apps/front/src/components/pages/home/: home.html  home.rs
apps/front/src/components/shared/: mod.rs
apps/front/src/components/shared/select2/: mod.rs  select2.js  select2.rs
apps/front/src/config/: mod.rs  setings.rs
apps/front/src/routes/: home.rs  home_router.rs  mod.rs  routes.rs
apps/front/src/settings/: environment.rs  mod.rs  setings.rs
apps/front/src/utils/: is_htmx_request.rs  mod.rs
apps/front/src/utils/dev/: live_reload.rs  mod.rs
apps/front/src/utils/http/: mod.rs
apps/front/src/utils/http/headers/: get_referer_header.rs  is_htmx_request.rs  mod.rs
apps/front/src/utils/http/responses/: errors.rs  mod.rs  render_root_layout.rs  render_tera_template.rs
apps/front/static/: live_reload.js  styles.css
apps/live-reload/: Cargo.toml
apps/live-reload/src/: live_reload.rs  main.rs
apps/live-reload/src/settings/: setings.rs
apps/live-reload/static/: live_reload.js
scripts/: start-front-dev.sh
