[package]
name = "live-reload"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
actix-files = { version = "0.6.2", features = ["actix-server"] }
actix = "0.13.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dotenv="0.15.0"
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
    "fast-rng",
]
